package org.connecthub.backend.enums;

public enum ContentType {
    POST, STORY
}