package org.connecthub.backend.enums;

public enum FriendshipStatus {
    PENDING, ACCEPTED, BLOCKED
}
